📝 업데이트: GitHub 저장소 링크 및 문서 URL 수정
✨ Changes:
- pyproject.toml의 모든 URL을 실제 GitHub 저장소로 업데이트
- README.md의 링크들을 올바른 저장소 주소로 수정
- CONTRIBUTING.md의 클론 명령어를 정확한 저장소로 변경
- 문서 링크를 GitHub README로 설정

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,10 +50,10 @@ dev = [
 ]
 
 [project.urls]
-Homepage = "https://github.com/yourusername/drf-spectacular-auth"
-Repository = "https://github.com/yourusername/drf-spectacular-auth"
-Documentation = "https://drf-spectacular-auth.readthedocs.io/"
-"Bug Tracker" = "https://github.com/yourusername/drf-spectacular-auth/issues"
+Homepage = "https://github.com/CodeMath/drf-spectacular-auth"
+Repository = "https://github.com/CodeMath/drf-spectacular-auth"
+Documentation = "https://github.com/CodeMath/drf-spectacular-auth#readme"
+"Bug Tracker" = "https://github.com/CodeMath/drf-spectacular-auth/issues"
 
 [tool.setuptools.packages.find]
 where = ["."]
