Fix Django settings loading for tests
- Add conftest.py to configure Django before test collection
- Update tests/__init__.py with Django setup
- Improve pytest.ini with explicit Django settings

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,4 +1,6 @@
 [tool:pytest]
 DJANGO_SETTINGS_MODULE = tests.settings
 python_files = tests.py test_*.py *_tests.py
-addopts = -v --tb=short
+python_paths = .
+testpaths = tests
+addopts = -v --tb=short --ds=tests.settings
