--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,7 +12,7 @@ jobs:
     strategy:
       matrix:
         python-version: ['3.10', '3.11', '3.12']
-        django-version: ['4.0', '4.1', '4.2', '5.0']
+        django-version: ['4.2', '5.0']
         exclude:
           # Django 5.0 requires Python 3.10+
           - python-version: '3.8'
@@ -63,4 +63,4 @@ jobs:
       uses: codecov/codecov-action@v3
       with:
         file: ./coverage.xml
-        fail_ci_if_error: true
+        fail_ci_if_error: false
