--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,8 +4,8 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "drf-spectacular-auth"
-version = "1.0.3"
-description = "Authentication UI for DRF Spectacular with AWS Cognito support"
+version = "1.1.0"
+description = "Enhanced Authentication UI for DRF Spectacular with AWS Cognito support and Django integration"
 readme = "README.md"
 requires-python = ">=3.8"
 license = {text = "MIT"}
